# PaperFriend-desktop-app

./: README.md
Code/PaperFriend/: PaperFriend.pro  myresources.qrc
Code/PaperFriend/Analysis/: .gitattributes  DataAnalysis.cpp  DataAnalysis.h  textanalysis.cpp  textanalysis.h
Code/PaperFriend/Frontend/: activity_cell.cpp  activity_cell.h  activity_cell.ui  activityclasses.cpp  activityclasses.h  add_habit.cpp  add_habit.h  add_habit_cell.ui  all_activities.cpp  all_activities.h  all_activities.ui  all_habits.cpp  all_habits.h  all_habits.ui  analysis_test.cpp  cardclasses.cpp  cardclasses.h  display_daily_habit.cpp  dynamicgraph.h  (+37 more)
Code/PaperFriend/file_processing/file_processing/: CMakeLists.txt  file_save_and_load.cpp  file_save_and_load.h
Code/PaperFriend/file_processing/test_file_library/: CMakeLists.txt  tst_files_processing.cpp
Code/build-PaperFriend-Qt_6_3_1_for_macOS-Debug/: Makefile  moc_activity_cell.cpp  moc_all_activities.cpp  moc_all_habits.cpp  moc_all_people.cpp  moc_display_daily_habit.cpp  moc_edit.cpp  moc_mainwindow.cpp  moc_people_cell.cpp  moc_qaesencryption.cpp  moc_text_analysis_window.cpp  moc_texteditor.cpp  qmake_qmake_qm_files.qrc  qrc_myresources.cpp  qrc_qmake_qmake_qm_files.cpp  ui_activity_cell.h  ui_add_habit_cell.h  ui_all_activities.h  ui_all_habits.h  ui_all_people.h  ui_display_daily_habit.h  ui_mainwindow.h  ui_people_cell.h  ui_text_analysis_window.h  ui_texteditor.h
doc/: project_design.md
doc/reports/: Report template.md  W1 Report.md  W2 Report.md  W3 Report.md  W4 Report.md  W5 Report.md  W6 Report.md  W7 Report.md
(+1090 files in other folders)
